# ChangeLog for x11-base/xorg-server
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-server/ChangeLog,v 1.819 2015/02/08 17:40:24 chithanh Exp $

*xorg-server-1.17.0 (08 Feb 2015)

  08 Feb 2015; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +files/xorg-server-1.17-ia64-fix_inx_outx.patch, +xorg-server-1.17.0.ebuild,
  metadata.xml:
  Version bump, bug #539168.

  25 Jan 2015; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  -xorg-server-1.12.4-r2.ebuild, -xorg-server-1.15.0.ebuild,
  -xorg-server-1.15.1.ebuild, -xorg-server-1.15.2.ebuild,
  -xorg-server-1.16.0.ebuild, -xorg-server-1.16.1.ebuild,
  -xorg-server-1.16.2-r1.ebuild, -xorg-server-1.16.2.901-r1.ebuild,
  -xorg-server-1.16.2.901.ebuild, -xorg-server-1.16.2.ebuild:
  Remove vulnerable versions, bug #532086.

  25 Jan 2015; Agostino Sarubbo <ago@gentoo.org> xorg-server-1.12.4-r3.ebuild,
  xorg-server-1.15.2-r1.ebuild:
  Stable for alpha, wrt bug #532086

  17 Jan 2015; Markus Meier <maekke@gentoo.org> xorg-server-1.15.2-r1.ebuild:
  arm stable, bug #532086

  17 Jan 2015; Markus Meier <maekke@gentoo.org> xorg-server-1.12.4-r3.ebuild:
  arm stable, bug #532086

  16 Jan 2015; Agostino Sarubbo <ago@gentoo.org> xorg-server-1.12.4-r3.ebuild,
  xorg-server-1.15.2-r1.ebuild:
  Stable for ia64, wrt bug #532086

  15 Jan 2015; Agostino Sarubbo <ago@gentoo.org> xorg-server-1.12.4-r3.ebuild,
  xorg-server-1.15.2-r1.ebuild:
  Stable for ppc, wrt bug #532086

  14 Jan 2015; Agostino Sarubbo <ago@gentoo.org> xorg-server-1.12.4-r3.ebuild,
  xorg-server-1.15.2-r1.ebuild:
  Stable for ppc64, wrt bug #532086

  13 Jan 2015; Agostino Sarubbo <ago@gentoo.org> xorg-server-1.12.4-r3.ebuild,
  xorg-server-1.15.2-r1.ebuild:
  Stable for sparc, wrt bug #532086

  12 Jan 2015; Jeroen Roovers <jer@gentoo.org> xorg-server-1.15.2-r1.ebuild:
  Stable for HPPA (bug #532086).

  11 Jan 2015; Andreas Schuerch <nativemad@gentoo.org>