@@ -12,4 +12,4 @@ REQUIRED_USE=!minimal? ( || ( dmx kdrive xephyr xnest xorg xvfb ) ) xephyr? ( kd
 SLOT=0/1.17.0
 SRC_URI=http://xorg.freedesktop.org/releases/individual/xserver/xorg-server-1.17.0.tar.bz2
 _eclasses_=autotools	8fc2dd333ef9346c906ffd9a523d8211	autotools-utils	3727db64c7b960903d5033280f108080	eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f	xorg-2	69479ff7a35a30e863a475568d29b9be
-_md5_=f8ddc7c9364d8f9f595d29b9fa9a091f
+_md5_=cadbcf874c3088002d2a7a7803d9b29b
