@@ -1,6 +1,10 @@
 # ChangeLog for x11-base/xorg-server
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-server/ChangeLog,v 1.819 2015/02/08 17:40:24 chithanh Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-server/ChangeLog,v 1.820 2015/02/09 03:08:51 chithanh Exp $
+
+  09 Feb 2015; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  xorg-server-1.17.0.ebuild:
+  Remove reference to non-existent upgrade guide.
 
 *xorg-server-1.17.0 (08 Feb 2015)
 
